# cmake_test

./: CMakeLists.txt  Readme.md
src/: main.cc  ns.cc  ns.h  tmp.cc  tmp.h
